--- a/package.json
+++ b/package.json
@@ -9,27 +9,28 @@
     "prepare-marketplace": "tsx ./scripts/market-pack.cts"
   },
   "dependencies": {
-    "@paralleldrive/cuid2": "^2.2.2",
-    "@vue/runtime-core": "^3.4.37",
-    "@vue/runtime-dom": "^3.4.37",
-    "@vue/shared": "^3.4.37",
+    "@ciderapp/pluginkit": "github:ciderapp/pluginkit",
+    "@paralleldrive/cuid2": "^2.3.1",
+    "@vue/runtime-core": "^3.5.25",
+    "@vue/runtime-dom": "^3.5.25",
+    "@vue/shared": "^3.5.25",
     "lodash": "^4.17.21",
-    "vue": "^3.4.29"
+    "vue": "^3.5.25"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.6",
-    "@types/node": "^22.0.0",
-    "@vitejs/plugin-vue": "^5.0.5",
+    "@types/lodash": "^4.17.21",
+    "@types/node": "^22.19.1",
+    "@vitejs/plugin-vue": "^5.2.4",
     "adm-zip": "0.5.16",
-    "pinia": "^3.0.0",
-    "sass": "^1.77.6",
-    "tsx": "^4.16.5",
-    "typescript": "^5.2.2",
-    "unplugin-auto-import": "^19.0.0",
-    "vite": "^6.0.0",
-    "vite-plugin-css-injected-by-js": "^3.5.1",
-    "vite-tsconfig-paths": "^5.0.0",
-    "vue-tsc": "^2.0.21",
-    "yaml": "^2.4.5"
+    "pinia": "^3.0.4",
+    "sass": "^1.94.2",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
+    "unplugin-auto-import": "^19.3.0",
+    "vite": "^6.4.1",
+    "vite-plugin-css-injected-by-js": "^3.5.2",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vue-tsc": "^2.2.12",
+    "yaml": "^2.8.1"
   }
 }
